--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
 @import url(./fonts/font.css) all;
 @import url(./all/all.css) all;
 @import url(./header/header.css) all;
+@import url(./main/main.css) all;
