--- a/style/style.css
+++ b/style/style.css
@@ -2,3 +2,4 @@
 @import url(./all/all.css) all;
 @import url(./header/header.css) all;
 @import url(./main/main.css) all;
+@import url(./ability/ability.css) all;
