--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,4 @@
 @import url(./header/header.css) all;
 @import url(./main/main.css) all;
 @import url(./ability/ability.css) all;
+@import url(./description/description.css) all;
