--- a/style/main/main.css
+++ b/style/main/main.css
@@ -12,7 +12,7 @@ main{
 }
 .main-img img{
     max-width: 345px;
-    min-height: 436px;
+    max-height: 436px;
 }
 .main-title{
     font-family: "segoewplight", sans-serif;
