--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,4 @@
 @import url(./main/main.css) all;
 @import url(./ability/ability.css) all;
 @import url(./description/description.css) all;
+@import url(./media/media.css) all;
