--- a/style/all/all.css
+++ b/style/all/all.css
@@ -28,6 +28,8 @@ button{
     border: none;
     text-decoration: none;
     background: none;
+    padding: 0;
+    margin: 0;
 }
 /* flex */
 .flex{
