--- a/style/style.css
+++ b/style/style.css
@@ -4,4 +4,5 @@
 @import url(./main/main.css) all;
 @import url(./ability/ability.css) all;
 @import url(./description/description.css) all;
+@import url(./nav_mobile/nav_mobile.css) all;
 @import url(./media/media.css) all;
